NetBSD Problem Report #49460

From www@NetBSD.org  Tue Dec  9 22:11:45 2014
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 111E0A650D
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  9 Dec 2014 22:11:45 +0000 (UTC)
Message-Id: <20141209221143.DA69DA6528@mollari.NetBSD.org>
Date: Tue,  9 Dec 2014 22:11:43 +0000 (UTC)
From: alnsn@NetBSD.org
Reply-To: alnsn@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: kdump hangs on big ktr_len values
X-Send-Pr-Version: www-1.0

>Number:         49460
>Category:       bin
>Synopsis:       kdump hangs on big ktr_len values
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Dec 09 22:15:00 +0000 2014
>Closed-Date:    Sun Mar 27 21:59:12 +0000 2016
>Last-Modified:  Sun Mar 27 21:59:12 +0000 2016
>Originator:     Alexander Nasonov
>Release:        and64 -current (7.99.1)
>Organization:
TNF
>Environment:
>Description:
When ktr_len field in ktr_header is bigger than INT_MAX/2 + 1, the loop 'while (ktrlen > size) size *= 2;' will reach size=0 and never terminate.

>How-To-Repeat:
I was running afl-fuzz and I executed kdump fuzzer_stats by mistake.
>Fix:
Add if (ktrlen > INT_MAX / 2) errx(1, "bogus length 0x%x", ktrlen);


>Release-Note:

>Audit-Trail:
From: "Alexander Nasonov" <alnsn@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49460 CVS commit: src/usr.bin/kdump
Date: Sun, 27 Mar 2016 21:51:20 +0000

 Module Name:	src
 Committed By:	alnsn
 Date:		Sun Mar 27 21:51:20 UTC 2016

 Modified Files:
 	src/usr.bin/kdump: kdump.c

 Log Message:
 Don't enter infinite loop on big ktr_len values.

 Fixes PR 49460.


 To generate a diff of this commit:
 cvs rdiff -u -r1.122 -r1.123 src/usr.bin/kdump/kdump.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: alnsn@NetBSD.org
State-Changed-When: Sun, 27 Mar 2016 21:59:12 +0000
State-Changed-Why:
Fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.