Don't enter infinite loop on big ktr_len values.

Fixes PR 49460.